<resources>

    <string name="app_name">Final Project</string>

    <string name="receive_image" translatable="false">Receive Image</string>
    <string name="send_image" translatable="false">Send Image</string>
    <string name="receive" translatable="false">RECEIVE</string>
    <string name="sent" translatable="false">SENT</string>

    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="enterNumber">Enter number</string>
    <string name="lat">Lat:</string>
    <string name="longitude">Longitude:</string>
    <string name="lookup" >Lookup</string>
    <string name="view">View</string>
    <string name="favourate">Favourite</string>
    <string name="latlgt">Lat---------Lng</string>

    <string name="sundb" translatable="false">sundb</string>
    <string name="searchRecord" translatable="false">searchRecord</string>
    <string name="latSearch" translatable="false">latSearch</string>
    <string name="lngSearch" translatable="false">lngSearch</string>
    <string name="Sunlookup">Sun-Lookup</string>-->


    <string name="sunlookup_information">The APP looks up sunrise and sunset times based on the latitude and longitude entered by the user.</string>
    <string name="sunlookup_information1">The lat range is -90.00 to 90.00 and longitude range is -180.00 to 180.00.</string>
    <string name="sunlookup_information2">If it is greater than or less than the range, the APP will convert it to the correct number.</string>
    <string name="sunlookup_information3">Negative numbers represent south lat and west longitudes.</string>
    <string name="sl_ifo_titlr">Sun Lookup</string>
    <string name="delete">Delete</string>
    <string name="first">Sunrise/Sunset</string>
    <string name="second">Recipe</string>
    <string name="third">Dictionary</string>
    <string name="forth">Deezer Song</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="word">Word</string>
    <string name="hint">Enter a word</string>
    <string name="definition">Definition</string>
    <string name="search">Look up</string>
    <string name="save">Save</string>
    <string name="read">View</string>
    <string name="history">Search History</string>
    <string name="dic_database_name" translatable="false">database-dictionary</string>
    <string name="record_goes_here">Record goes here</string>
    <string name="dic_sharedPreferences_name" translatable="false">MyDictionary</string>
    <string name="question">Question: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">Undo</string>
    <string name="deleted_message">You deleted record #</string>
    <string name="want_to_delete">Do you want to delete this term? </string>
    <string name="dictionary_information">The APP support user to look up the definitions of word which is entered by the user. User can click save button to save the search term and definitions in the database and click view button to see the history of the search term and definitions.</string>
    <string name="dictionary_info_title">Dictionary API instructions</string>
    <string name="back">Back Home</string>
    <string name="error_msg">Please enter a valid word</string>
    <string name="sun">Sunrise and Sunset lookup</string>
    <string name="RecipeSearch">Recipe Search</string>
    <string name="da">Dictionary API</string>
    <string name="dssa">Deezer song search api</string>
    <string name="thank">Thank you using this APP</string>
    <string name="Welcome">Welcome</string>

    <!--Recipe Search value strings-->
    <string name="search_hint">Enter a recipe name...</string>
    <string name="search_button">Search</string>
    <string name="favorite_recipes">favorite list</string>
    <string name="enter_search_term">Please enter a search term.</string>
    <string name="error_fetch_data">Error fetching data. Please try again later.</string>
    <string name="error_occurred">An error occurred. Please try again.</string>
    <string name="recipe_deleted">Recipe "%1$s" deleted</string>
    <string name="help_info">Help information not available.</string>
    <string name="recipe_search_information">This app allows users to search for recipes by entering a keyword. Users can view detailed information about each recipe, including images, summaries, and source URLs. There is also functionality to save favorite recipes to a database for easy access later. The search history is preserved, so users can quickly find previously searched terms and their results.</string>
    <string name="recipe_search_info_title">Recipe_Search_API_Instruction</string>
    <string name="remove_favorite">remove</string>
    <string name="favorite_has_added">favorite_has_added</string>

    <!---->
    <!--chaowu-->
    <string name="deezer_information">The Music Search and Favorites app allows users to search for their favorite artists and explore their songs. It leverages the Deezer API to fetch artist information and song details. Users can save their favorite songs for later viewing and manage them within the app. </string>
    <string name="deezer_info_title">Deezer Song API Instruction</string>
    <string name="chao_add">Do you want to add "</string>to your Favorite List?
    <string name="chao_add2">" to your Favorite List? </string>
    <string name="chao_delete">Deleted Song:  </string>
    <string name="chao_favorite">Favorite Songs</string>
    <string name="chao_artist">Artist name</string>
    <string name="chao_titile">Title: </string>
    <string name="chao_duration">Duration: </string>
    <string name="chao_album">Album: </string>
    <string name="chao_cover">Cover: </string>
    <string name="chao_detail">Songs Detail</string>
    <string name="songDetail_chao">Detail</string>
</resources>